Update to patch 1.1.0

--- a/DarmuhsTerminalCommands/darmuhsTerminalStuff.csproj
+++ b/DarmuhsTerminalCommands/darmuhsTerminalStuff.csproj
@@ -14,11 +14,12 @@
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
+    <DebugSymbols>false</DebugSymbols>
+    <DebugType>none</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <OutputPath>C:\Users\irroy\AppData\Roaming\Thunderstore Mod Manager\DataFolder\LethalCompany\profiles\test profile\BepInEx\plugins\darmuh-TerminalStuff\</OutputPath>
+    <DefineConstants>
+    </DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
