--- a/DarmuhsTerminalCommands/darmuhsTerminalStuff.csproj
+++ b/DarmuhsTerminalCommands/darmuhsTerminalStuff.csproj
@@ -45,6 +45,8 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="darmuhngo" />
+    <None Include="CHANGELOG.md" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="BepInEx.AssemblyPublicizer.MSBuild" Version="0.4.1" PrivateAssets="all" />
@@ -66,11 +68,8 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Lethal Company\BepInEx\plugins\darmuh-darmuhsTerminalStuff\FovAdjust.dll</HintPath>
     </Reference>
-    <Reference Include="HelmetCamera">
-      <HintPath>C:\Users\irroy\AppData\Roaming\Thunderstore Mod Manager\DataFolder\LethalCompany\profiles\test profile\BepInEx\plugins\RickArg-Helmet_Cameras\HelmetCamera.dll</HintPath>
-    </Reference>
-    <Reference Include="ShipLoot">
-      <HintPath>C:\Users\irroy\AppData\Roaming\Thunderstore Mod Manager\DataFolder\LethalCompany\profiles\test profile\BepInEx\plugins\tinyhoot-ShipLoot\ShipLoot\ShipLoot.dll</HintPath>
+    <Reference Include="OpenBodyCams">
+      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Lethal Company\BepInEx\dontloadpls\Zaggy1024-OpenBodyCams\OpenBodyCams.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -80,9 +79,12 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="TerminalApi, Version=1.3.2.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="TerminalApi, Version=1.4.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\irroy\AppData\Roaming\Thunderstore Mod Manager\DataFolder\LethalCompany\profiles\forTravisMarioandSam\BepInEx\plugins\NotAtomicBomb-TerminalApi\TerminalApi.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Lethal Company\BepInEx\plugins\terminalapi\TerminalApi.dll</HintPath>
+    </Reference>
+    <Reference Include="TwoRadarMaps">
+      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Lethal Company\BepInEx\dontloadpls\2radarmaps\TwoRadarMaps.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Collections, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -126,22 +128,43 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CamsMethods.cs" />
+    <Compile Include="AddTPKeywords.cs" />
+    <Compile Include="AdminCommands.cs" />
+    <Compile Include="AllTheLootStuff.cs" />
+    <Compile Include="ColorCommands.cs" />
+    <Compile Include="CostCommands.cs" />
+    <Compile Include="DynamicCommands.cs" />
+    <Compile Include="FovAdjustStuff.cs" />
+    <Compile Include="GambaCommands.cs" />
+    <Compile Include="PlayerCamsCompatibility.cs" />
+    <Compile Include="MenuBuild.cs" />
+    <Compile Include="MoreCommands.cs" />
     <Compile Include="netObject.cs" />
     <Compile Include="netHandler.cs" />
+    <Compile Include="OpenBodyCamsCompatibility.cs" />
     <Compile Include="OtherPatches.cs" />
+    <Compile Include="PageBuilder.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="ShipControls.cs" />
+    <Compile Include="ShortcutBindings.cs" />
+    <Compile Include="SpecialConfirmationLogic.cs" />
+    <Compile Include="SplitViewChecks.cs" />
+    <Compile Include="StartofHandling.cs" />
+    <Compile Include="SuitCommands.cs" />
+    <Compile Include="TerminalClockStuff.cs" />
+    <Compile Include="TerminalEvents.cs" />
+    <Compile Include="TwoRadarMapsCompatibility.cs" />
     <Compile Include="VideoManager.cs" />
     <Compile Include="ConfigSettings.cs" />
     <Compile Include="MyTerminalPatcher.cs" />
-    <Compile Include="LeaveTerminal.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="walkieTerm.cs" />
+    <Compile Include="ViewCommands.cs" />
+    <Compile Include="WalkieTerm.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="darmuhngo" />
@@ -151,7 +174,6 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="readme.txt" />
     <Content Include="specialnodes.txt" />
   </ItemGroup>
   <ItemGroup>
